@@ -1,0 +1,1 @@
+@CO	No useful headers or records (0-length file is not considered SAM)
